# rusty-torrent

./: Cargo.toml
src/: config.rs  main.rs
src/bencode/: decoder.rs  mod.rs
src/peer/: bitfield.rs  client.rs  handshake.rs  message.rs  mod.rs
src/torrent/: magnet.rs  metainfo.rs  mod.rs
src/tracker/: http.rs  mod.rs  udp.rs
